--- a/app/views/public/users/_profile.html.erb
+++ b/app/views/public/users/_profile.html.erb
@@ -65,7 +65,7 @@
 			<td>
 			<% if user.followers.count != 0 %>
 				<%= link_to followers_user_path(user) do %>
-				フォロワーリスト: <span class="badge badge-info">
+				フォロワーリスト: <span class="badge badge-info faa-bounce animated-hove">
 				<%= user.followers.count %></span>
 				<% end %>
 			<% else %>
