--- a/app/views/public/users/show.html.erb
+++ b/app/views/public/users/show.html.erb
@@ -51,11 +51,11 @@
 		 	</div>
 			<div class="card-body mt-5">
 				<div class="card-text">
-					<h5 class="text-center">~ 1週間ごとのタスク達成数 ~</h5>
+					<h5 class="text-center">~ 1日ごとのタスク達成数 ~</h5>
 				</div>
 				<%= area_chart @user.week_list,
 				 	colors: ["#0096f3"],
-				 	xtitle: "1日ごとのタスク達成数", ytitle: "達成数",
+				 	xtitle: "1週間分", ytitle: "達成数",
 				 	messages: {empty: "No data"}, stacked: true %>
 			</div>
 	     </div>
