--- a/app/views/shared/_error_messages.html.erb
+++ b/app/views/shared/_error_messages.html.erb
@@ -1,7 +1,7 @@
 <% if obj.errors.any? %>
   <div class="alert alert-danger" role="alert">
     <div id="error_explanation">
-      <strong><%= pluralize(obj.errors.count, "error") %> prohibited this obj from being saved:</strong>
+      <strong><%= pluralize(obj.errors.count, "") %> 件のエラーがあります</strong>
 
       <ul>
       <% obj.errors.full_messages.each do |message| %>
