--- a/app/views/public/board_comments/edit.html.erb
+++ b/app/views/public/board_comments/edit.html.erb
@@ -5,11 +5,10 @@
 				<h4 class="text-center p-2">コメント編集</h4>
 			</div>
 			<div class="card-body">
-			<!--パーシャル活用修正-->
 			<%#= render 'board_comments/form', board_comment: @board_comment, obj: @board %>
 			<%= form_with model: @board_comment,url: board_board_comment_path, local: true do |f| %>
 
-				<%= render 'shared/error_messages', obj: @board_comment %>
+				<%#= render 'shared/error_messages', obj: @board_comment %>
 				<div class="form-group">
 				</div>
 				<div class="form-group">
