--- a/app/views/public/boards/_index.html.erb
+++ b/app/views/public/boards/_index.html.erb
@@ -1,5 +1,6 @@
 <div class="card-box">
-	<table class="table">
+	<table class="table table-hover">
+		<% if boards.any? %>
 		<thead>
 			<tr>
 				<th>タイトル</th>
@@ -10,30 +11,35 @@
 			</tr>
 		</thead>
 		<tbody>
-		<% boards.each do |board| %>
-			<tr>
-				<td>
-				  <%= link_to board.title, board_path(board) %>
-				</td>
-				<td>
-				<% board.board_tags.each do |board_tag| %>
-					<span class="badge badge-secondary">
-						<%= board_tag.tag.name %>
-					</span>
-				<% end %>
-				</td>
-				<td class="small"><%= l board.created_at %></td>
-				<td>
-				<% if user_signed_in? %>
-	  				<% if board.board_liked_by?(current_user) %>
-					　　<i class="far fa-surprise"><%= board.board_likes.count %></i>
+			<% boards.each do |board| %>
+				<tr>
+					<td>
+					  <%= link_to board.title, board_path(board) %>
+					</td>
+					<td>
+					<% board.board_tags.each do |board_tag| %>
+						<span class="badge badge-secondary">
+							<%= board_tag.tag.name %>
+						</span>
 					<% end %>
-				<% end %>
-				</td>
-				<td><%= link_to '詳細', board_path(board), class: 'btn btn-outline-info' %></td>
-			</tr>
-		<% end %>
+					</td>
+					<td class="small"><%= l board.created_at %></td>
+					<td>
+					<% if user_signed_in? %>
+		  				<% if board.board_liked_by?(current_user) %>
+						　　<i class="far fa-surprise"><%= board.board_likes.count %></i>
+						<% end %>
+					<% end %>
+					</td>
+					<td><%= link_to '詳細', board_path(board), class: 'btn btn-outline-info' %></td>
+				</tr>
+			<% end %>
 		</tbody>
+		<% else %>
+		<div class="no_content m-5">
+			<span>まだお気に入りに追加した記事がありません。<br />
+			気になる記事を見つけて、気になるボタンを押してみましょう</span>
+		</div>
+		<% end %>
 	</table>
 </div>
-
