--- a/app/views/public/board_likes/index.html.erb
+++ b/app/views/public/board_likes/index.html.erb
@@ -20,6 +20,7 @@
 
 			<div class="card-body">
 				<table class="table table-hover table-responsive">
+				<!--パーシャル化-->
 				<% if @board_likes.any? %>
 					<thead>
 						<tr>
