--- a/app/views/public/boards/_index.html.erb
+++ b/app/views/public/boards/_index.html.erb
@@ -1,6 +1,6 @@
 <div class="card-box">
 	<table class="table table-hover">
-		<% if boards.any? %>
+		<%# if boards.any? %>
 		<thead>
 			<tr>
 				<th>タイトル</th>
@@ -35,11 +35,10 @@
 				</tr>
 			<% end %>
 		</tbody>
-		<% else %>
-		<div class="no_content m-5">
-			<span>まだお気に入りに追加した記事がありません。<br />
-			気になる記事を見つけて、気になるボタンを押してみましょう</span>
-		</div>
-		<% end %>
+		<%# else %>
+<!-- 		<div class="no_content m-5">
+			<span>まだ追加した記事がありません。</span>
+		</div> -->
+		<%# end %>
 	</table>
 </div>
