[fix]follow-button-icon

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -23,6 +23,7 @@
 @import "todolist";
 @import "user";
 @import "top";
+@import "relationship";
 
 @import 'font-awesome-sprockets';
 @import 'font-awesome';
