--- a/app/views/public/relationships/_follow.html.erb
+++ b/app/views/public/relationships/_follow.html.erb
@@ -2,16 +2,16 @@
 <% if user != current_user %>
 	<% if user.followed_by?(current_user) %>
 		<th>
-			フォロー済:
+			フォロー済
 			<%= link_to user_relationship_path(user.id), method: :delete do %>
-			  <i class="far fa-star unfollow-btn"></i>  <%= user.followers.count %></i>
+			  <i class="far fa-star unfollow-btn faa-bounce animated-hover"></i>  <%#= user.followers.count %></i>
 			<% end %>
 		</th>
 	<% else %>
 		<th>
-			フォローする:
+			フォローしますか？
 			<%= link_to user_relationships_path(user.id), method: :post do %>
-		  	  <i class="far fa-star follow-btn"></i>  <%= user.followings.count %></i>
+		  	  <i class="far fa-star follow-btn faa-bounce animated-hover"></i>  <%#= user.followings.count %></i>
 		  	<% end %>
 		</th>
 	<% end %>
