[fix]follow/partial

--- a/app/views/public/relationships/_follow.html.erb
+++ b/app/views/public/relationships/_follow.html.erb
@@ -4,7 +4,7 @@
 		<th>
 			フォロー済
 			<%= link_to user_relationship_path(user.id), method: :delete do %>
-			  <i class="far fa-star unfollow-btn faa-bounce animated-hover"></i>  <%#= user.followers.count %></i>
+			  <i class="fas fa-star unfollow-btn faa-bounce animated-hover"></i>  <%#= user.followers.count %></i>
 			<% end %>
 		</th>
 	<% else %>
