--- a/app/views/public/users/follows.html.erb
+++ b/app/views/public/users/follows.html.erb
@@ -23,27 +23,8 @@
 			<div class="card-heading thead p-2">
 				<h5 class="text-center">フォローリスト  <i class="far fa-list-alt"></i></h5>
 			</div>
-
-		<table class="table table-hover">
-			<thead>
-				<tr>
-					<th>画像</th>
-					<th>ユーザー名</th>
-					<th>登録日時</th>
-					<th>ユーザーページ</th>
-				</tr>
-			</thead>
-			<tbody>
-				<% @users.each do |user| %>
-				<tr>
-					<td><%= attachment_image_tag(user, :profile_image, :fill, 200, 200, fallback: 'no_image.jpg', size: '50x50') %></td>
-					<td><%= user.name %></td>
-					<td><%= l user.created_at %></td>
-					<td><%= link_to '詳細', user_path(user), class: 'btn btn-outline-info' %></td>
-				</tr>
-				<% end %>
-			</tbody>
-		</table>
+			<!--リスト一覧-->
+			<%= render 'public/users/index', users: @users %>
 		</div>
 	</div>
 </div>
