--- a/app/views/home/top.html.erb
+++ b/app/views/home/top.html.erb
@@ -1,7 +1,8 @@
+<% unless user_signed_in? || admin_signed_in? %>
 <div class="top-heading">
   <h1 id="logo">Study Record</h1>
 </div>
-
+<% end %>
 
 <div id="container">
   <div id="theTarget">
@@ -14,7 +15,7 @@
 
 <div class="row">
   <div class="about_guide">
-        <h1 class="text-center">~ Study Recordでできること ~</h1>
+        <h1 class="text-title">~ Study Recordでできること ~</h1>
       </div>
       <div class="about-guide-child-contents">
         <div style="display: flex;">
